fix(components): Make swirl-file-chip buttons visible on focus

--- a/packages/swirl-components/src/components/swirl-file-chip/swirl-file-chip.css
+++ b/packages/swirl-components/src/components/swirl-file-chip/swirl-file-chip.css
@@ -19,7 +19,8 @@
 }
 
 
-.file-chip:hover {
+.file-chip:hover,
+.file-chip:focus-within {
   &.file-chip--one-action .file-chip__info > * {
     width: calc(100% - 44px - var(--s-space-12));
   }
